--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 // Home Content
 
 .home {
+  margin-top: 91px;
 
   .intro {
     .header-img {
